# starbase

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  prettier.config.js  rust-toolchain.toml
crates/app/: Cargo.toml  README.md
crates/app/src/: app.rs  diagnostics.rs  exit_code.rs  lib.rs  session.rs  tracing.rs
crates/app/src/tracing/: format.rs  level.rs  mod.rs  otel.rs  rotation.rs
crates/app/tests/: app_test.rs  tracing_otel_auto_test.rs  tracing_otel_http_test.rs  tracing_otel_test.rs
crates/app/tests/common/: mod.rs
crates/archive/: Cargo.toml  README.md
crates/archive/src/: archive.rs  archive_error.rs  dmg.rs  dmg_error.rs  error.rs  file.rs  file_error.rs  gz.rs  gz_error.rs  helpers.rs  lib.rs  pkg.rs  pkg_error.rs  tar.rs  tar_error.rs  tree_differ.rs  zip.rs  zip_error.rs
crates/archive/src/codecs/: bz2.rs  gz.rs  mod.rs  state.rs  xz.rs  z.rs  zstd.rs
crates/archive/tests/: archive_test.rs  codecs_test.rs  dmg_test.rs  file_test.rs  gz_test.rs  helpers_test.rs  pkg_test.rs  tar_test.rs  tree_differ_test.rs  utils.rs  zip_test.rs
crates/archive/tests/__fixtures__/: .gitattributes
crates/archive/tests/__fixtures__/compress/: contents.tar.Z  file.txt.Z
crates/args/: Cargo.toml  README.md
crates/args/src/: lib.rs  syntax.pest
crates/args/tests/: args_test.rs  base_test.rs
crates/console/: Cargo.toml  README.md
crates/console/src/: buffer.rs  console.rs  console_error.rs  lib.rs  prompts.rs  reporter.rs  stream.rs  theme.rs  ui.rs
crates/console/src/components/: confirm.rs  data.rs  entry.rs  input.rs  input_field.rs  layout.rs  list.rs  map.rs  mod.rs  notice.rs  progress.rs  section.rs  select.rs  signal_container.rs  styled_text.rs  table.rs
crates/console/src/utils/: estimator.rs  formats.rs  mod.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: emitter.rs  event.rs  lib.rs  subscriber.rs
crates/events/tests/: event_macros_test.rs  events_test.rs
crates/framework/: Cargo.toml
crates/framework/src/: app.rs  app_state.rs  args.rs  context.rs  diagnostic.rs  diagnostics.rs  emitters.rs  errors.rs  events.rs  instance.rs  lib.rs  main.rs  resource.rs  resources.rs  session.rs  state.rs  states.rs  system copy.rs  system.rs  system_param.rs  tracing.rs
crates/framework/tests/: app_test.rs  app_test.rs0  context_macros_test.rs  context_test.rs  event_macros_test.rs  events_test.rs  instance_macros_test.rs  instances_test.rs  system_macros_test.rs
crates/id/: Cargo.toml  README.md
crates/id/src/: id.rs  id_error.rs  id_regex.rs  lib.rs
crates/id/tests/: id_test.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: event.rs  lib.rs  listener.rs  resource.rs  state.rs  subscriber.rs  system.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/src/: bin.rs  fixture.rs  lib.rs  process.rs  sandbox.rs  settings.rs
crates/shell/: Cargo.toml  README.md
crates/shell/src/: helpers.rs  hooks.rs  joiner.rs  lib.rs  quoter.rs  shell.rs  shell_error.rs
crates/shell/src/shells/: ash.rs  bash.rs  dash.rs  elvish.rs  fish.rs  ion.rs  mod.rs  murex.rs  nu.rs  powershell.rs  pwsh.rs  sh.rs  xonsh.rs  zsh.rs
crates/shell/src/shells/snapshots/: starbase_shell__shells__bash__tests__escape_empty_string.snap  starbase_shell__shells__bash__tests__escape_plain_string.snap  starbase_shell__shells__bash__tests__escape_string_with_backslashes.snap  starbase_shell__shells__bash__tests__escape_string_with_single_quotes.snap  starbase_shell__shells__bash__tests__escape_string_with_spaces.snap  starbase_shell__shells__bash__tests__escape_string_with_special_characters.snap  starbase_shell__shells__bash__tests__formats_cd_hook-2.snap  starbase_shell__shells__bash__tests__formats_cd_hook.snap  starbase_shell__shells__bash__tests__formats_cd_hook.snap.new  starbase_shell__shells__elvish__tests__formats_cd_hook-2.snap  starbase_shell__shells__elvish__tests__formats_cd_hook.snap  starbase_shell__shells__elvish__tests__formats_cd_hook.snap.new  starbase_shell__shells__fish__tests__formats_cd_hook.snap  starbase_shell__shells__fish__tests__formats_cd_hook.snap.new  starbase_shell__shells__murex__tests__formats_cd_hook.snap  starbase_shell__shells__murex__tests__formats_cd_hook.snap.new  starbase_shell__shells__nu__tests__formats_cd_hook.snap  starbase_shell__shells__pwsh__tests__formats_cd_hook.snap  starbase_shell__shells__zsh__tests__formats_cd_hook.snap  starbase_shell__shells__zsh__tests__formats_cd_hook.snap.new
crates/shell/src/utils/: escape.rs  mod.rs
crates/shell/src/utils/snapshots/: starbase_shell__utils__escape__tests__escape_string_with_all_special_characters-2.snap  starbase_shell__utils__escape__tests__escape_string_with_all_special_characters-3.snap  starbase_shell__utils__escape__tests__escape_string_with_newline-2.snap  (+9 more)
crates/shell/tests/: join_args_test.rs  shell_test.rs
crates/styles/: Cargo.toml  README.md
crates/styles/src/: color.rs  format.rs  lib.rs  stylize.rs  tags.rs  theme.rs
crates/styles/tests/: color_test.rs
crates/test-app/: Cargo.toml
crates/test-app/src/: main.rs
crates/utils/: Cargo.toml  README.md
crates/utils/benches/: glob.rs
crates/utils/src/: env.rs  envx.rs  fs.rs  fs_editor.rs  fs_error.rs  fs_lock.rs  glob.rs  glob_cache.rs  glob_error.rs  hash.rs  hash_error.rs  json.rs  json_error.rs  lib.rs  net.rs  net_error.rs  path.rs  toml.rs  toml_error.rs  yaml.rs  yaml_error.rs
crates/utils/tests/: envx_test.rs  fs_lock_test.rs  fs_test.rs  glob_test.rs  hash_test.rs  json_test.rs  net_test.rs  path_test.rs  utils.rs  yaml_test.rs
crates/utils/tests/snapshots/: json_test__editor_config__can_change_space_indent.snap  json_test__editor_config__can_change_tab_indent.snap  json_test__editor_config__uses_defaults_when_no_config.snap  json_test__editor_config__writes_ugly.snap  yaml_test__editor_config__can_change_space_indent.snap  yaml_test__editor_config__can_change_tab_indent.snap  yaml_test__editor_config__uses_defaults_when_no_config.snap
examples/app/: Cargo.toml
examples/app/src/: main.rs
examples/term/: Cargo.toml
examples/term/src/: main.rs
(+17 files in other folders)
