[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
async-trait = "0.1.89"
compact_str = "0.9.0"
crossterm = "0.28.1"
dirs = "6.0.0"
iocraft = "0.7.16"
# iocraft = { git = "https://github.com/ccbrown/iocraft", branch = "main" }
miette = "7.6.0"
regex = { version = "1.12.2", default-features = false }
relative-path = "2.0.1"
reqwest = { version = "0.13.1", default-features = false }
rustc-hash = "2.1.1"
scc = "3.5.2"
schematic = { version = "0.19.4", default-features = false }
serial_test = "3.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
] }
tracing = { version = "0.1.44" }
