[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
async-trait = "0.1.89"
compact_str = "0.9.0"
crossterm = "0.29.0"
dirs = "6.0.0"
iocraft = "0.8.0"
# iocraft = { git = "https://github.com/ccbrown/iocraft", branch = "main" }
miette = "7.6.0"
regex = { version = "1.12.3", default-features = false }
relative-path = "2.0.1"
reqwest = { version = "0.13.2", default-features = false }
rustc-hash = "2.1.2"
scc = "3.7.0"
schematic = { version = "0.19.6", default-features = false }
serial_test = "3.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
] }
tracing = { version = "0.1.44" }
