[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", default-features = false, features = ["derive"] }
compact_str = "0.9.1"
crossterm = "0.29.0"
dirs = "6.0.0"
iocraft = "0.8.3"
# iocraft = { git = "https://github.com/ccbrown/iocraft", branch = "main" }
miette = "7.6.0"
regex = { version = "1.12.4", default-features = false }
relative-path = "2.0.1"
reqwest = { version = "0.13.4", default-features = false }
rustc-hash = "2.1.2"
scc = "3.7.2"
schematic = { version = "0.19.6", default-features = false }
serial_test = "3.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
] }
tracing = { version = "0.1.44" }
