[package]
name = "starbase"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Framework for building performant command line applications and developer tools."
repository = "https://github.com/moonrepo/starbase"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.4.0", path = "../styles", features = [
	"theme",
] }
async-trait = { workspace = true }
chrono = { version = "0.4.38", default-features = false, features = [
	"clock",
	"std",
] }
miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-log = { version = "0.2.0", optional = true, default-features = false, features = [
	"log-tracer",
	"std",
] }
tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
] }

[features]
default = ["tracing"]
tracing = [
	"dep:tracing",
	"dep:tracing-chrome",
	"dep:tracing-log",
	"dep:tracing-subscriber",
]
