[package]
name = "starbase"
version = "0.10.10"
edition = "2024"
license = "MIT"
description = "Framework for building performant command line applications and developer tools."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.6.7", path = "../styles", features = [
	"theme",
] }
async-trait = { workspace = true }
chrono = { version = "0.4.44", default-features = false, features = [
	"clock",
	"std",
] }
miette = { workspace = true, features = ["fancy"] }
opentelemetry = { version = "0.31.0", optional = true, features = ["logs", "metrics"] }
opentelemetry-appender-tracing = { version = "0.31.1", optional = true }
opentelemetry-otlp = { version = "0.31.1", optional = true, default-features = false, features = [
	"grpc-tonic",
	"logs",
	"metrics",
	"trace",
] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = [
	"logs",
	"metrics",
	"rt-tokio",
] }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-log = { version = "0.2.0", optional = true, default-features = false, features = [
	"log-tracer",
	"std",
] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true, default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
] }

[dev-dependencies]
opentelemetry-proto = "0.31.0"
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.5"

[features]
default = ["tracing"]
otel = [
	"dep:opentelemetry",
	"dep:opentelemetry-appender-tracing",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry_sdk",
	"dep:tracing-opentelemetry",
	"tracing",
]
tracing = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber"]
log-compat = ["dep:tracing-log"]
