[package]
name = "starbase"
version = "0.12.3"
edition = "2024"
license = "MIT"
description = "Framework for building performant command line applications and developer tools."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.6.8", path = "../styles", features = [
	"theme",
] }
async-trait = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = [
	"clock",
	"std",
] }
clap = { workspace = true, optional = true }
miette = { workspace = true, optional = true, features = ["fancy"] }
thiserror = { workspace = true }
tokio = { workspace = true }

# tracing
tracing = { workspace = true, optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-log = { version = "0.2.0", optional = true, default-features = false, features = [
	"log-tracer",
	"std",
] }
tracing-subscriber = { version = "0.3.23", optional = true, default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
	"json",
	"std",
] }

# opentelemetry
opentelemetry = { version = "0.32.0", optional = true, default-features = false, features = [
	"logs",
	"metrics",
	"trace",
] }
opentelemetry-appender-tracing = { version = "0.32.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true, default-features = false, features = [
	"logs",
	"metrics",
	"trace",
	"tokio",
	# http
	"http-proto",
	"reqwest-blocking-client",
	"reqwest-rustls",
	# grpc
	"grpc-tonic",
	"tls-aws-lc",
	"tls-roots",
] }
opentelemetry_sdk = { version = "0.32.1", optional = true, default-features = false, features = [
	"logs",
	"metrics",
	"trace",
	"tokio",
	"rt-tokio",
] }
tracing-opentelemetry = { version = "0.33.0", optional = true }

[dev-dependencies]
starbase = { path = ".", features = ["miette", "otel", "tracing"] }
opentelemetry-proto = "0.32.0"
prost = "0.14.4"
serial_test = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.6"

[features]
default = ["tracing"]
clap = ["dep:clap"]
miette = ["dep:miette"]
otel = [
	"dep:opentelemetry",
	"dep:opentelemetry-appender-tracing",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry_sdk",
	"dep:tracing-opentelemetry",
	"tracing",
]
tracing = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber"]
log-compat = ["dep:tracing-log"]
