[package]
name = "starbase_archive"
version = "0.11.2"
edition = "2024"
license = "MIT"
description = "Utilities for packing and unpacking archives. Supports tar and zip."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.6.2", path = "../styles" }
starbase_utils = { version = "0.11.11", path = "../utils", default-features = false, features = [
	"glob",
] }
miette = { workspace = true, optional = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# compression
bzip2 = { version = "0.5.2", optional = true }
flate2 = { version = "1.1.2", optional = true }
liblzma = { version = "0.4.1", optional = true }
zstd = { version = "0.13.3", optional = true }

# tar
# https://github.com/moonrepo/starbase/issues/56
binstall-tar = { version = "0.4.42", optional = true }

# zip
zip = { version = "4.1.0", default-features = false, optional = true }

[dev-dependencies]
starbase_archive = { path = ".", features = [
	"gz",
	"miette",
	"tar-all",
	"zip-all",
] }
starbase_sandbox = { path = "../sandbox" }

[features]
default = ["tar-gz"]
gz = ["dep:flate2"]
miette = ["dep:miette"]
tar = ["dep:binstall-tar"]
tar-all = ["tar", "tar-bz2", "tar-gz", "tar-xz", "tar-zstd"]
tar-bz2 = ["dep:bzip2", "tar"]
tar-gz = ["dep:flate2", "tar"]
tar-xz = ["dep:liblzma", "tar"]
tar-zstd = ["dep:zstd", "tar"]
zip = ["dep:zip"]
zip-all = ["zip", "zip-bz2", "zip-deflate", "zip-gz", "zip-xz", "zip-zstd"]
zip-bz2 = ["dep:bzip2", "zip", "zip/bzip2"]
zip-deflate = ["dep:flate2", "zip", "zip/deflate"]
zip-gz = ["zip-deflate"]
zip-xz = ["dep:liblzma", "zip", "zip/lzma"]
zip-zstd = ["dep:zstd", "zip", "zip/zstd"]
