[package]
name = "starbase_archive"
version = "0.11.8"
edition = "2024"
license = "MIT"
description = "Utilities for packing and unpacking archives. Supports tar and zip."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.89.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.6.3", path = "../styles" }
starbase_utils = { version = "0.11.20", path = "../utils", default-features = false, features = [
	"glob",
] }
miette = { workspace = true, optional = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# compression
bzip2 = { version = "0.6.1", optional = true }
flate2 = { version = "1.1.5", optional = true }
liblzma = { version = "0.4.5", optional = true, features = ["static"] }
zstd = { version = "0.13.3", optional = true }

# tar
# https://github.com/moonrepo/starbase/issues/56
binstall-tar = { version = "0.4.42", optional = true }

# zip
zip = { version = "6.0.0", default-features = false, optional = true }

[dev-dependencies]
starbase_archive = { path = ".", features = [
	"gz",
	"miette",
	"tar-all",
	"zip-all",
] }
starbase_sandbox = { path = "../sandbox" }

[features]
default = ["tar-gz"]
gz = ["dep:flate2"]
miette = ["dep:miette"]
tar = ["dep:binstall-tar"]
tar-all = ["tar", "tar-bz2", "tar-gz", "tar-xz", "tar-zstd"]
tar-bz2 = ["dep:bzip2", "tar"]
tar-gz = ["dep:flate2", "tar"]
tar-xz = ["dep:liblzma", "tar"]
tar-zstd = ["dep:zstd", "tar"]
zip = ["dep:zip"]
zip-all = ["zip", "zip-bz2", "zip-deflate", "zip-gz", "zip-xz", "zip-zstd"]
zip-bz2 = ["dep:bzip2", "zip", "zip/bzip2"]
zip-deflate = ["dep:flate2", "zip", "zip/deflate"]
zip-gz = ["zip-deflate"]
zip-xz = ["dep:liblzma", "zip", "zip/lzma-static"]
zip-zstd = ["dep:zstd", "zip", "zip/zstd"]
