[package]
name = "starbase_archive"
version = "0.14.1"
edition = "2024"
license = "MIT"
description = "Utilities for packing and unpacking archives. Supports tar, zip, dmg, and pkg."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.89.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.6.9", path = "../styles" }
starbase_utils = { version = "0.14.1", path = "../utils", default-features = false, features = [
	"glob",
] }
miette = { workspace = true, optional = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# compression
bzip2 = { version = "0.6.1", optional = true }
flate2 = { version = "1.1.9", optional = true }
liblzma = { version = "0.4.7", optional = true, features = ["static"] }
zstd = { version = "0.13.3", optional = true }

# tar
# https://github.com/moonrepo/starbase/issues/56
binstall-tar = { version = "0.4.42", optional = true }

# zip
zip = { version = "8.6.0", default-features = false, optional = true }

[dev-dependencies]
starbase_archive = { path = ".", features = [
	"gz",
	"miette",
	"dmg",
	"pkg",
	"tar-all",
	"zip-all",
] }
starbase_sandbox = { path = "../sandbox" }
starbase_utils = { path = "../utils", default-features = false }

[features]
default = ["tar-gz"]
miette = ["dep:miette"]

# Compression codecs
bz2 = ["dep:bzip2"]
gz = ["dep:flate2"]
xz = ["dep:liblzma"]
zstd = ["dep:zstd"]

# Formats and codec convenience aliases
dmg = []
pkg = []
tar = ["dep:binstall-tar"]
tar-all = ["tar", "tar-bz2", "tar-gz", "tar-xz", "tar-zstd"]
tar-bz2 = ["tar", "bz2"]
tar-gz = ["tar", "gz"]
tar-xz = ["tar", "xz"]
tar-zstd = ["tar", "zstd"]
zip = ["dep:zip"]
zip-all = ["zip", "zip-bz2", "zip-deflate", "zip-gz", "zip-xz", "zip-zstd"]
zip-bz2 = ["zip", "zip/bzip2"]
zip-deflate = ["zip", "zip/deflate"]
zip-gz = ["zip-deflate"]
zip-xz = ["zip", "zip/lzma"]
zip-zstd = ["zip", "zip/zstd"]
