[package]
name = "starbase_console"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Console reporting layer."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.80.0"

[dependencies]
starbase_styles = { version = "0.4.9", path = "../styles" }
crossterm = { workspace = true, optional = true }
iocraft = { workspace = true, optional = true }
miette = { workspace = true }
parking_lot = "0.12.3"
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
starbase_console = { path = ".", features = ["ui"] }

[features]
default = []
ui = ["dep:crossterm", "dep:iocraft", "dep:tokio"]
