[package]
name = "starbase_console"
version = "0.6.6"
edition = "2024"
license = "MIT"
description = "Console reporting layer."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[dependencies]
starbase_styles = { version = "0.5.1", path = "../styles" }
crossterm = { workspace = true, optional = true }
iocraft = { workspace = true, optional = true }
miette = { workspace = true, optional = true }
parking_lot = "0.12.3"
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
starbase_console = { path = ".", features = ["ui"] }

[features]
default = []
miette = ["dep:miette"]
ui = ["dep:crossterm", "dep:iocraft", "dep:tokio"]
