[package]
name = "starbase_console"
version = "0.6.32"
edition = "2024"
license = "MIT"
description = "Console reporting layer."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[dependencies]
starbase_styles = { version = "0.6.9", path = "../styles" }
crossterm = { workspace = true, optional = true }
iocraft = { workspace = true, optional = true }
miette = { workspace = true, optional = true }
parking_lot = "0.12.5"
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
starbase_console = { path = ".", features = ["serde", "ui"] }
libc = "0.2.186"

[features]
default = []
miette = ["dep:miette"]
serde = ["crossterm/serde", "dep:serde", "dep:serde_json"]
ui = ["dep:crossterm", "dep:iocraft", "dep:tokio"]
