[package]
name = "starbase_events"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Async and mutable event system."
repository = "https://github.com/moonrepo/starbase"

[dependencies]
starbase_macros = { version = "0.7.3", path = "../macros", features = [
	"events",
] }
async-trait = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
