[package]
name = "starbase_events"
version = "0.6.8"
edition = "2024"
license = "MIT"
description = "Async and mutable event system."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[dependencies]
starbase_macros = { version = "0.7.11", path = "../macros", features = [
	"events",
] }
async-trait = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
