[package]
name = "starbase"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Framework for building performant command line applications and developer tools."
repository = "https://github.com/moonrepo/starbase"
readme = "../../README.md"

[dependencies]
starbase_events = { version = "0.1.3", path = "../events" }
starbase_macros = { version = "0.1.4", path = "../macros" }
starbase_styles = { version = "0.1.5", path = "../styles", features = ["theme"] }
async-trait = { workspace = true }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
miette = { workspace = true, features = ["fancy"] }
num_cpus = "1.15.0"
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["tracing"] }
tracing = { workspace = true, optional = true }
tracing-log = { version = "0.1.3", optional = true, default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber = { version = "0.3.16", optional = true, default-features = false, features = ["env-filter", "fmt"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-log", "dep:tracing-subscriber", "starbase_macros/tracing"]
