[package]
name = "starbase_id"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A generic identifier."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[dependencies]
compact_str = { workspace = true, features = ["serde"] }
schematic = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
starbase_id = { path = ".", features = ["schematic"] }

[features]
default = []
schematic = ["dep:schematic"]
