[package]
name = "starbase_macros"
version = "0.8.9"
edition = "2024"
license = "MIT"
description = "Macros for the starbase framework."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }

[features]
events = []
tracing = []
