[package]
name = "starbase_sandbox"
version = "0.10.2"
edition = "2024"
license = "MIT"
description = "A temporary sandbox for testing file system and process operations, with fixtures support."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.89.0"

[dependencies]
starbase_utils = { version = "0.12.1", path = "../utils", default-features = false }
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
insta = "1.44.1"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
