[package]
name = "starbase_sandbox"
version = "0.11.0"
edition = "2024"
license = "MIT"
description = "A temporary sandbox for testing file system and process operations, with fixtures support."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.89.0"

[dependencies]
starbase_utils = { version = "0.13.1", path = "../utils", default-features = false }
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
insta = "1.47.2"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
