[package]
name = "starbase_shell"
version = "0.5.6"
edition = "2021"
license = "MIT"
description = "Utilities for detecting shells and managing profile files."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.65.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
miette = { workspace = true, optional = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target."cfg(windows)".dependencies]
sysinfo = { version = "0.31.4", default-features = false, features = [
	"system",
] }

[dev-dependencies]
starbase_sandbox = { path = "../sandbox" }
serial_test = { workspace = true }

[features]
default = []
miette = ["dep:miette"]
