[package]
name = "starbase_shell"
version = "0.7.1"
edition = "2024"
license = "MIT"
description = "Utilities for detecting shells and managing profile files."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
miette = { workspace = true, optional = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target."cfg(windows)".dependencies]
sysinfo = { version = "0.33.1", default-features = false, features = [
	"system",
] }

[dev-dependencies]
starbase_sandbox = { path = "../sandbox" }
serial_test = { workspace = true }

[features]
default = []
miette = ["dep:miette"]
