[package]
name = "starbase_styles"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Utilities for styling the terminal."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dirs = { workspace = true }
miette = { workspace = true, optional = true, features = ["fancy"] }
owo-colors = "4.0.0"
relative-path = { workspace = true, optional = true }
supports-color = "3.0.1"

[features]
default = []
theme = ["dep:miette"]
relative-path = ["dep:relative-path"]
