[package]
name = "starbase_styles"
version = "0.4.11"
edition = "2021"
license = "MIT"
description = "Utilities for styling the terminal."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dirs = { workspace = true }
miette = { workspace = true, optional = true, features = ["fancy"] }
owo-colors = "4.1.0"
relative-path = { workspace = true, optional = true }
supports-color = "3.0.2"

[features]
default = []
theme = ["dep:miette"]
relative-path = ["dep:relative-path"]
