[package]
name = "test_app"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
test_lib = { path = "../test-lib" }
starbase = { path = "../framework" }
starbase_utils = { path = "../utils", features = ["glob", "fs-lock"] }
log = "0.4.20"
miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
