[package]
name = "test_app"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
test_lib = { path = "../test-lib" }
starbase = { path = "../app" }
starbase_utils = { path = "../utils", features = ["glob", "fs-lock"] }
log = "0.4.21"
async-trait = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
