[package]
name = "starbase_utils"
version = "0.8.12"
edition = "2021"
license = "MIT"
description = "General fs, io, serde, net, etc, utilities."
repository = "https://github.com/moonrepo/starbase"
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starbase_styles = { version = "0.4.5", path = "../styles" }
dirs = { workspace = true }
miette = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

# editor-config
ec4rs = { version = "1.1.1", optional = true }

# fs
fs4 = { version = "0.11.1", optional = true }

# glob
wax = { version = "0.6.0", optional = true, features = ["walk"] }

# json
json-strip-comments = { version = "1.0.4", optional = true }
serde_json = { workspace = true, optional = true }

# toml
toml = { version = "0.8.19", optional = true }

# yaml
serde_yaml = { workspace = true, optional = true }

# net
reqwest = { workspace = true, optional = true }
url = { version = "2.5.3", optional = true }

[features]
default = []
editor-config = ["dep:ec4rs"]
fs-lock = ["dep:fs4", "dep:tokio"]
glob = ["dep:wax"]
# glob-miette = ["glob", "miette", "wax/miette"]
miette = ["dep:miette"]
net = ["dep:reqwest", "dep:url"]
json = ["dep:json-strip-comments", "dep:serde", "dep:serde_json"]
toml = ["dep:toml", "dep:serde"]
yaml = ["dep:regex", "dep:serde", "dep:serde_yaml"]

[dev-dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
starbase_sandbox = { path = "../sandbox" }
starbase_utils = { path = ".", features = [
	"editor-config",
	"fs-lock",
	"glob",
	# "glob-miette",
	"miette",
	"net",
	"json",
	"toml",
	"yaml",
] }
