[package]
name = "example_app"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
example_lib = { path = "../lib" }
starbase = { path = "../../crates/app" }
starbase_utils = { path = "../../crates/utils", features = ["glob", "fs-lock"] }
log = "0.4.21"
async-trait = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
