[package]
name = "example_app"
version = "0.5.9"
edition = "2024"
publish = false

[dependencies]
example_lib = { path = "../lib" }
starbase = { path = "../../crates/app" }
starbase_shell = { path = "../../crates/shell" }
starbase_utils = { path = "../../crates/utils", features = ["glob", "fs-lock"] }
log = "0.4.22"
miette = { workspace = true, features = ["fancy"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
